{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 123,
  "lineage": "0773d653-88ef-e2dc-dd24-78cc9451cbe6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-3c2bfa5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-3c2bfa5a",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-57b66b08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-57b66b08",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-6734d056",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "id": "subnet-6734d056",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-c162028c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-c162028c",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-cdea35ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-cdea35ec",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:subnet/subnet-dade54d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.31.64.0/20",
            "default_for_az": true,
            "id": "subnet-dade54d4",
            "map_public_ip_on_launch": true,
            "owner_id": "065594493678",
            "state": "available",
            "vpc_id": "vpc-0516fb78"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:vpc/vpc-0516fb78",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a100fece",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b564eacf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0516fb78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-8598f0fb",
            "owner_id": "065594493678",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:loadbalancer/app/ALB/fc04b20193adf071",
            "arn_suffix": "app/ALB/fc04b20193adf071",
            "dns_name": "ALB-609647259.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:065594493678:loadbalancer/app/ALB/fc04b20193adf071",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-06b78cec9cbf052c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-3c2bfa5a"
              },
              {
                "subnet_id": "subnet-57b66b08"
              }
            ],
            "subnets": [
              "subnet-3c2bfa5a",
              "subnet-57b66b08"
            ],
            "tags": {
              "Name": "ALB"
            },
            "vpc_id": "vpc-0516fb78",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:065594493678:instance/i-05ec5ff3f05a63019",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ec5ff3f05a63019",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "apache",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0260d2a4f0c2cdb94",
            "private_dns": "ip-172-31-1-111.ec2.internal",
            "private_ip": "172.31.1.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01e76bfe5037fc51a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3c2bfa5a",
            "tags": {
              "Hostname": "apache",
              "Name": "Apache"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-69494d4e"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9089763828757e1",
            "arn": "arn:aws:ec2:us-east-1:065594493678:instance/i-0273873e2795628e9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0273873e2795628e9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0592d84b250190d02",
            "private_dns": "ip-172-31-9-7.ec2.internal",
            "private_ip": "172.31.9.7",
            "public_dns": "ec2-3-235-101-224.compute-1.amazonaws.com",
            "public_ip": "3.235.101.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0494fdbffa356b161",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0337aa69311961ae3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-3c2bfa5a",
            "tags": {
              "Hostname": "nginx",
              "Name": "Nginx"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0337aa69311961ae3"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lbl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:listener/app/ALB/fc04b20193adf071/6e8b09195539f915",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:targetgroup/ALB-TG/284aff10f47f37ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:065594493678:listener/app/ALB/fc04b20193adf071/6e8b09195539f915",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:loadbalancer/app/ALB/fc04b20193adf071",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.lb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:targetgroup/ALB-TG/284aff10f47f37ce",
            "arn_suffix": "targetgroup/ALB-TG/284aff10f47f37ce",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:065594493678:targetgroup/ALB-TG/284aff10f47f37ce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0516fb78"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg_nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:065594493678:targetgroup/ALB-TG/284aff10f47f37ce-20200704115348285100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:065594493678:targetgroup/ALB-TG/284aff10f47f37ce",
            "target_id": "i-0273873e2795628e9"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.tg",
            "aws_security_group.sg_nginx"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:security-group/sg-04327c759d7ff6891",
            "description": "SG Apache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04327c759d7ff6891",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow HTTP traffic incoming from Nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg apache",
            "name_prefix": null,
            "owner_id": "065594493678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Apache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0516fb78"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:security-group/sg-06b78cec9cbf052c6",
            "description": "SG alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b78cec9cbf052c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic incoming from world to ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg alb",
            "name_prefix": null,
            "owner_id": "065594493678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0516fb78"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:065594493678:security-group/sg-0337aa69311961ae3",
            "description": "SG Nginx",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0337aa69311961ae3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Allow HTTP traffic incoming from ALB to nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg nginx",
            "name_prefix": null,
            "owner_id": "065594493678",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0516fb78"
          }
        }
      ]
    }
  ]
}